# twilight

./: Cargo.toml  search-index.js
.github/workflows/: rust.yml
audio/: Cargo.toml
audio/examples/shard/: Cargo.toml
audio/examples/shard/src/: main.rs
audio/src/: connect.rs  event.rs  heartbeat.rs  lib.rs  session.rs  session_handler.rs  socket_forwarder.rs
audio/src/audio_connection/: mod.rs  udp_handler.rs
cache/in-memory/src/: updates.rs
embed-builder/src/: builder.rs
gateway/: Cargo.toml
gateway/src/: lib.rs
gateway/src/shard/processor/: impl.rs  inflater.rs
http/src/client/: mod.rs
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
model/src/applications/interaction/: mod.rs
model/src/voice/: mod.rs
model/src/voice/gateway/: heartbeat.rs  identify.rs  mod.rs  opcode.rs  ready.rs  resume.rs  select_protocol.rs  session_description.rs  speaking.rs
twilight_cache/: enum.InMemoryCacheError.html  struct.InMemoryCache.html  trait.UpdateCache.html
twilight_gateway/: index.html
twilight_gateway/shard/error/: enum.Error.html
twilight_http/: index.html
twilight_http/client/: struct.Client.html
twilight_http/request/: struct.Request.html
twilight_http/request/channel/update_channel/: enum.UpdateChannelError.html
twilight_http/request/guild/create_guild/: enum.CreateGuildError.html
twilight_http/request/guild/create_guild_channel/: enum.CreateGuildChannelError.html
twilight_http/request/guild/create_guild_prune/: enum.CreateGuildPruneError.html
twilight_http/request/guild/get_guild_prune_count/: enum.GetGuildPruneCountError.html
twilight_http/request/user/update_current_user/: enum.UpdateCurrentUserError.html
twilight_http/routing/: enum.PathParseError.html
twilight_lavalink/client/: enum.ClientError.html
twilight_lavalink/node/: enum.NodeError.html
(+8 files in other folders)
