[workspace]
members = [
    "audio",
    "audio/examples/shard",
    "cache/base",
    "cache/in-memory",
    "cache/trait",
    "command-parser",
    "gateway",
    "gateway/examples/cluster",
    "gateway/examples/intents",
    "gateway/examples/metrics",
    "gateway/examples/queue",
    "gateway/examples/shard",
    "http",
    "http/examples/allowed-mentions",
    "http/examples/get-message",
    "http/examples/proxy",
    "model",
    "twilight",
]
